--- a/lawyer-booking/.gitignore
+++ b/lawyer-booking/.gitignore
@@ -39,6 +39,7 @@ Thumbs.db
 application-local.properties
 application-dev.properties
 application-prod.properties
+application.properties
 
 ####################################
 # Speech / ML Models (VERY IMPORTANT)
